--- a/LDA_playground.ipynb
+++ b/LDA_playground.ipynb
@@ -9,7 +9,7 @@
         "FpdS0hyUxf72"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPnSgTLrIZKyA3yLBIy1Su1",
+      "authorship_tag": "ABX9TyMGYa0cMzxvHMHOWqrBa+J2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,18 +90,18 @@
       "source": [
         "# Topic Modelling Playground\n",
         "\n",
+        "This notebook has been prepared with the intention to make the topic modelling process more transparent, by giving them easier access to some of the many knobs and dials of the process. If anything breaks, does not work as promised, is unclear or is missing do not hesitate to contact me and I will do my best to make things right: Mathias.Johansson@kom.lu.se\n",
+        "\n",
         "## What is topic modelling?\n",
         "\n",
         "- Techniques for detecting _latent topics_ within a corpus\n",
         "- Threfore  a _topic_ does not refer to what we normally would consider a _topic_\n",
         "\n",
-        "\n",
         "## What is it used for?\n",
         "\n",
         "- Document retreival\n",
         "- Literature review\n",
-        "- Distant reading\n",
-        "\n"
+        "- Distant reading"
       ]
     },
     {
@@ -265,7 +265,7 @@
         "\n",
         "show_stopwords = False #@param {type:\"boolean\"}\n",
         "\n",
-        "add_stopwords = '&rsquo; rsquo' #@param {type: \"string\"}\n",
+        "add_stopwords = '' #@param {type: \"string\"}\n",
         "new_stopwords = {_ for _ in re.findall(r'\\w+', add_stopwords)}\n",
         "\n",
         "remove_stopwords = '' #@param {type: \"string\"}\n",
