Added .zip file

--- a/LDA_playground.ipynb
+++ b/LDA_playground.ipynb
@@ -9,7 +9,7 @@
         "FpdS0hyUxf72"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMGYa0cMzxvHMHOWqrBa+J2",
+      "authorship_tag": "ABX9TyM5UEDpaDqlzVXtoXm9UhqX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qtyInHfbxDFD"
+        "id": "qtyInHfbxDFD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7ea6db0-7ed0-4c26-a292-c385c1e8ecf6"
       },
       "source": [
         "\n",
@@ -77,10 +81,35 @@
         "%matplotlib inline\n",
         "from pprint import pprint\n",
         "\n",
+        "!wget https://github.com/MatJohaDH/LDA_playground/raw/main/collection_txt.zip\n",
+        "\n",
         "#@markdown ---"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-06-09 07:00:21--  https://github.com/MatJohaDH/LDA_playground/raw/main/collection_txt.zip\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/MatJohaDH/LDA_playground/main/collection_txt.zip [following]\n",
+            "--2021-06-09 07:00:21--  https://raw.githubusercontent.com/MatJohaDH/LDA_playground/main/collection_txt.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 130396 (127K) [application/zip]\n",
+            "Saving to: ‘collection_txt.zip’\n",
+            "\n",
+            "collection_txt.zip  100%[===================>] 127.34K  --.-KB/s    in 0.05s   \n",
+            "\n",
+            "2021-06-09 07:00:21 (2.63 MB/s) - ‘collection_txt.zip’ saved [130396/130396]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
