Updated with wordclouds

--- a/LDA_playground.ipynb
+++ b/LDA_playground.ipynb
@@ -9,7 +9,7 @@
         "FpdS0hyUxf72"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM5UEDpaDqlzVXtoXm9UhqX",
+      "authorship_tag": "ABX9TyMnEEOfQz/33kNu62MagJDS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qtyInHfbxDFD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c7ea6db0-7ed0-4c26-a292-c385c1e8ecf6"
+        "id": "qtyInHfbxDFD"
       },
       "source": [
         "\n",
@@ -62,6 +58,7 @@
         "#@markdown in sequence. **Finally**, if you want to read the code in any of the\n",
         "#@markdown cells just double click on the text, and again to hide the code.\n",
         "\n",
+        "from tqdm.notebook import tqdm\n",
         "import os\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import interact_manual\n",
@@ -69,13 +66,20 @@
         "import re\n",
         "import pandas as pd\n",
         "from nltk.stem.snowball import SnowballStemmer as stemmer\n",
+        "!pip install stopwords\n",
+        "# !pip install wordcloud\n",
+        "from wordcloud import WordCloud as wc\n",
+        "from stopwords import get_stopwords\n",
+        "\n",
         "\n",
         "#add the swedish stopwords too...\n",
         "stopwords = {'English': {_ for _ in gensim.parsing.preprocessing.STOPWORDS},\n",
-        "             'Swedish': {_ for _ in pd.read_csv('https://raw.githubusercontent.com/peterdalle/svensktext/master/stoppord/stoppord.csv', header=0, encoding='utf-8')['word']}}\n",
+        "             'Swedish': {_ for _ in pd.read_csv('https://raw.githubusercontent.com/peterdalle/svensktext/master/stoppord/stoppord.csv', header=0, encoding='utf-8')['all']},\n",
+        "             'Latin' : {_ for _ in get_stopwords('latin')}}\n",
         "\n",
         "stemmers = {'English': gensim.parsing.preprocessing.stem_text,\n",
-        "            'Swedish': stemmer('swedish').stem}\n",
+        "            'Swedish': stemmer('swedish').stem,\n",
+        "            'Latin': lambda token: token}\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "%matplotlib inline\n",
@@ -85,31 +89,8 @@
         "\n",
         "#@markdown ---"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2021-06-09 07:00:21--  https://github.com/MatJohaDH/LDA_playground/raw/main/collection_txt.zip\n",
-            "Resolving github.com (github.com)... 140.82.112.3\n",
-            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/MatJohaDH/LDA_playground/main/collection_txt.zip [following]\n",
-            "--2021-06-09 07:00:21--  https://raw.githubusercontent.com/MatJohaDH/LDA_playground/main/collection_txt.zip\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 130396 (127K) [application/zip]\n",
-            "Saving to: ‘collection_txt.zip’\n",
-            "\n",
-            "collection_txt.zip  100%[===================>] 127.34K  --.-KB/s    in 0.05s   \n",
-            "\n",
-            "2021-06-09 07:00:21 (2.63 MB/s) - ‘collection_txt.zip’ saved [130396/130396]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -266,7 +247,7 @@
         "#@markdown Since some of the preprocessing steps are language dependent we first\n",
         "#@markdown need to select which language to use. For this exersice there are two\n",
         "#@markdown options: English or Swedish.\n",
-        "language = 'English' #@param['English', 'Swedish']\n",
+        "language = 'English' #@param['English', 'Swedish', 'Latin']\n",
         "gensim.parsing.preprocessing.DEFAULT_FILTERS[-1] = stemmers[language]\n",
         "\n",
         "print(f'You have selected: {language}')"
@@ -370,7 +351,8 @@
         "\n",
         "#@markdown This is where the magic happens\n",
         "\n",
-        "df['corpus'] = df['doc'].apply(vocab.doc2bow)\n"
+        "tqdm.pandas(desc=\"Vectorizing corpus\")\n",
+        "df['corpus'] = df['doc'].progress_apply(vocab.doc2bow)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -381,7 +363,7 @@
         "id": "4jPoysm7a6iD"
       },
       "source": [
-        "# 3. Topic modelling\n",
+        "# 3. Topic modelling crash course\n",
         "\n",
         "Three important things to know about topic modelling:\n",
         "1. \"Topic\" refers to a *__latent topic__*, which is not what we normally mean when we use the term.\n",
@@ -437,34 +419,56 @@
         "#@markdown If you are interested in the metric-based approach, run this cell to\n",
         "#@markdown get a graph of two such metrics calculated on the following number of topics:\n",
         "ntops = []\n",
+        "cv = []\n",
         "umass = []\n",
         "logper = []\n",
-        "topics = '3, 2, 5, 7, 11, 13, 17, 19, 23' #@param {type: \"string\"}\n",
+        "topics = '3, 5, 7, 11, 13, 17, 19, 23' #@param {type: \"string\"}\n",
         "topics = sorted(set(int(_) for _ in re.findall(r'\\d+', topics)))\n",
-        "for ntop in topics:\n",
+        "for ntop in tqdm(topics, desc='Calculating scores'):\n",
         "    ntops.append(ntop)\n",
-        "    lda =gensim.models.LdaModel(corpus=df['corpus'], id2word=vocab, num_topics=ntop, alpha='auto', per_word_topics=True)\n",
-        "    cm = gensim.models.coherencemodel.CoherenceModel(model=lda, corpus=df['corpus'], \n",
-        "                                   dictionary=vocab, texts=df['doc'])\n",
-        "    umass.append(cm.get_coherence())\n",
+        "    lda =gensim.models.LdaModel(corpus=df['corpus'], id2word=vocab, \n",
+        "                                num_topics=ntop, alpha='auto', \n",
+        "                                per_word_topics=True)\n",
+        "    cm = gensim.models.coherencemodel.CoherenceModel(model=lda, \n",
+        "                                                     corpus=df['corpus'], \n",
+        "                                                     dictionary=vocab, \n",
+        "                                                     texts=df['doc'],\n",
+        "                                                     coherence='c_v')\n",
+        "    cv.append(cm.get_coherence())\n",
+        "    cm_u = gensim.models.coherencemodel.CoherenceModel(model=lda, \n",
+        "                                                     corpus=df['corpus'], \n",
+        "                                                     dictionary=vocab, \n",
+        "                                                     texts=df['doc'],\n",
+        "                                                     coherence='u_mass')\n",
+        "    umass.append(cm_u.get_coherence())\n",
+        "\n",
         "    # logper.append(lda.log_perplexity(df['corpus']))\n",
         "    logper.append(lda.bound(df['corpus']))\n",
+        "\n",
+        "# Createing a single plot with three different y-axes\n",
         "fig, ax1 = plt.subplots()\n",
         "ax2 =ax1.twinx()\n",
+        "ax3 =ax1.twinx()\n",
         "\n",
-        "p1, = ax1.plot(ntops, umass, 'b', label='U-mass - maximise')\n",
-        "p2, =ax2.plot(ntops, logper, 'g--', label='Log perplexity - minimize')\n",
+        "# Plotting each metric on a different y-axis\n",
+        "p1, = ax1.plot(ntops, cv, 'r', label='Coherence$_v$ - maximise')\n",
+        "p2, = ax2.plot(ntops, umass, 'b', label='U-mass - maximise')\n",
+        "p3, = ax3.plot(ntops, logper, 'g--', label='Log perplexity - minimize')\n",
         "\n",
+        "# removing ticks and labels on all three y-axes\n",
+        "for ax in [ax1, ax2, ax3]:\n",
+        "    ax.tick_params(left=False)\n",
+        "    ax.set_yticks([])\n",
+        "\n",
+        "# Setting the appropriate x-ticks, and its label\n",
         "ax1.set_xticklabels(ntops)\n",
         "ax1.set_xticks(ntops)\n",
         "ax1.set_xlabel('Topics')\n",
-        "ax1.set_ylabel('U-mass')\n",
-        "ax2.set_ylabel('Log perplexity')\n",
         "\n",
+        "# Adding legend\n",
+        "ax1.legend(handles=[p1, p2, p3])\n",
         "\n",
-        "ax1.legend(handles=[p1, p2])\n",
-        "# topic_df.plot(x='topic', y=['umass'], kind='line')\n",
-        "# topic_df.plot(x='topic', y=['logperplexity'], kind='line')\n",
+        "# Showing plot\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -482,7 +486,7 @@
         "#@markdown preprocessed corpus. Just fill in the number of topics and the\n",
         "\n",
         "#@markdown ###Selecting the number of topics\n",
-        "number_of_topics =  19#@param {type: \"integer\", min: 2, max: 500}\n",
+        "number_of_topics =  5#@param {type: \"integer\", min: 2, max: 500}\n",
         "\n",
         "#@markdown ###A note on reproducability\n",
         "#@markdown In this instance an algorith called __Latent Dirichlet Allocation__ (LDA) is applied. Part of the initialisation of this algorithm is randomized, this means that we cannot reliably get identical results every time we run the algorithm. By assigning a value to the _seed_ we can make sure that every time __we__ run the same algorith with the the same data and same number of topics they will be identical.   \n",
@@ -527,14 +531,34 @@
         "#@markdown To inspect the topic select a topic number and the number of terms you want to display. \n",
         "#@markdown Remember that the topic number has to be less than the number of topics you selected when running the model above.\n",
         "#@markdown It is also worth noting that it starts counting at _0_.\n",
-        "topic_nr =  19#@param {type: \"integer\"}\n",
+        "\n",
+        "topic_nr =  0#@param {type: \"integer\"}\n",
         "topic_nr = min(topic_nr, number_of_topics -1)\n",
-        "number_of_words =  20 #@param {type : \"slider\", min: 1, max: 20}\n",
+        "number_of_words =  13 #@param {type : \"slider\", min: 1, max: 20}\n",
+        "draw_cloud = True#@param {type: \"boolean\"}\n",
+        "\n",
         "print(f'Topic: {topic_nr}')\n",
         "def print_topic_terms(topic_nr):\n",
         "    for term, p in lda.show_topic(topic_nr, number_of_words):\n",
         "        print(f'\\t{term} (p. {p:.4f})')\n",
-        "print_topic_terms(topic_nr)"
+        "print_topic_terms(topic_nr)\n",
+        "\n",
+        "def cloud(cloud_topic, cloud_terms, plim=0):\n",
+        "    if cloud_topic >= 0 and cloud_topic < lda.num_topics:\n",
+        "        cloud = wc(background_color='white', max_words=cloud_terms, contour_width=3, contour_color='steelblue')\n",
+        "        term_ps = lda.show_topic(topicid=cloud_topic, topn=cloud_terms)\n",
+        "        term_ps\n",
+        "        term_freq_dic = {term:p for term, p in term_ps if p>=plim}\n",
+        "        cloud.generate_from_frequencies(frequencies=term_freq_dic)\n",
+        "\n",
+        "        plt.figure(figsize=(7, 4))\n",
+        "        plt.axis(\"off\");\n",
+        "    #         plt.gcf().canvas.set_window_title('My Window Title') \n",
+        "    #         plt.gca().set_title('Simple plot')\n",
+        "        plt.imshow(cloud) \n",
+        "        plt.show()\n",
+        "if draw_cloud:\n",
+        "    cloud(topic_nr, number_of_words)"
       ],
       "execution_count": null,
       "outputs": []
@@ -548,11 +572,15 @@
         "#@title Inspecting top topics { run: \"auto\", vertical-output: true, display-mode: \"form\" }\n",
         "#@markdown Alternatively select how many of the __top__ topics and number of terms to inspect\n",
         "nr_top_topics =  20#@param {type: \"integer\"}\n",
+        "number_of_words =  20 #@param {type : \"slider\", min: 1, max: 20}\n",
+        "draw = 'Cloud' #@param [\"Table\", \"Cloud\", \"Both\"]\n",
         "\n",
-        "number_of_words =  5 #@param {type : \"slider\", min: 1, max: 20}\n",
         "for coherence, topic in top_topics[:nr_top_topics]:\n",
         "    print(f'Topic: {topic} (coherence {coherence:.4f})')\n",
-        "    print_topic_terms(topic)\n"
+        "    if draw != 'Cloud':\n",
+        "        print_topic_terms(topic)\n",
+        "    if draw != 'Table':\n",
+        "        cloud(topic, nr_top_topics)\n"
       ],
       "execution_count": null,
       "outputs": []
